################################################################################
## testsuite/vhdl/CMakeLists.txt
################################################################################

################################################################################
## TestSuites for EDA project
################################################################################

project(eda_testsuite)

add_subdirectory(parser)
add_subdirectory(numeric_convert)

